@@ -1,4 +1,4 @@
-# Perfect WooCommerce Brands 1.7.0
+# Perfect WooCommerce Brands 1.7.1
 
 [![Perfect WooCommerce Brands](https://ps.w.org/perfect-woocommerce-brands/assets/icon-128x128.png)](https://es.wordpress.org/plugins/perfect-woocommerce-brands/)
 
